src/objects/loan__Broker__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Origination__c</fullName>
        <formula>TEXT(loan__Lending_Account__r.Contract_Originated_From__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Origination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Broker Account for this lending account.</description>
        <inlineHelpText>Broker Account for this lending account.</inlineHelpText>
        <label>Broker Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.loan__Broker__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brokers</relationshipLabel>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Buy_Rate__c</fullName>
        <description>Percent Rate for Commission</description>
        <inlineHelpText>Percent Rate for Commission</inlineHelpText>
        <label>Buy Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Calculation_Method__c</fullName>
        <description>Method of how commission will be calculated.</description>
        <inlineHelpText>Method of how commission will be calculated</inlineHelpText>
        <label>Calculation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Amount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Of Financed Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spread</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Commission_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Commission Amount</description>
        <inlineHelpText>Total Commission Amount</inlineHelpText>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Commission_Disbursement_Method__c</fullName>
        <description>Method how commission will be disbursed to broker.</description>
        <inlineHelpText>Method how commission will be disbursed to broker.</inlineHelpText>
        <label>Commission Disbursement Method</label>
        <picklist>
            <picklistValues>
                <fullName>Upfront</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Upfront at month end</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay as received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Commission_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Commission Plan</description>
        <inlineHelpText>Commission Plan</inlineHelpText>
        <label>Commission Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Commission_Plan__c.loan__Enabled__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select the commission plan</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Commission_Plan__c</referenceTo>
        <relationshipLabel>Brokers</relationshipLabel>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Commission_Till_Date__c</fullName>
        <label>Commission Till Date</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Broker Contact for this lending account.</description>
        <inlineHelpText>Broker Contact for this lending account.</inlineHelpText>
        <label>Broker Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.loan__Contact_Type__c</field>
                <operation>equals</operation>
                <value>Broker</value>
            </filterItems>
            <infoMessage>Please select the appropriate broker</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Brokers</relationshipLabel>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if the boker is enabled.</description>
        <inlineHelpText>Check if the boker is enabled.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Factor__c</fullName>
        <defaultValue>1</defaultValue>
        <description>If the calculation method is percentage of loan amount, then this will be used while calculating the commission amount</description>
        <inlineHelpText>If the calculation method is percentage of loan amount, then this will be used while calculating the commission amount</inlineHelpText>
        <label>Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Flat_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Flat Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Last_Commission_Date__c</fullName>
        <label>Last Commission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Payment_Date__c</fullName>
        <description>Last Payment Date For Commission</description>
        <inlineHelpText>Last Payment Date For Commission.</inlineHelpText>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Principal_Used__c</fullName>
        <label>Last Principal Used For Commission</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Lending_Account__c</fullName>
        <label>Lending Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Brokers</relationshipLabel>
        <relationshipName>Brokers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>loan__Maximum_Commission_Percentage__c</fullName>
        <defaultValue>1.0</defaultValue>
        <description>The maximum percentage of commission can be given</description>
        <inlineHelpText>The maximum percentage of commission can be given</inlineHelpText>
        <label>Maximum Commission Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Next_Payment_Date__c</fullName>
        <description>Next Payment Date For Commission</description>
        <inlineHelpText>Next Payment Date For Commission.</inlineHelpText>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Plan_Description__c</fullName>
        <description>Description of Commission Plan</description>
        <inlineHelpText>Description of Commission Plan.</inlineHelpText>
        <label>Plan Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Remaining_Commission_Amount_Funding__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Remaining Commission Amount</description>
        <inlineHelpText>Remaining Commission Amount</inlineHelpText>
        <label>Remaining Commission Amount at Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Reverse_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Total_Commission_Paid_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Commission Paid Amount</description>
        <inlineHelpText>Commission Paid Amount</inlineHelpText>
        <label>Commission Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Upfront_Commission_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Upfront Commission Amount</description>
        <inlineHelpText>Upfront Commission Amount</inlineHelpText>
        <label>Upfront Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Upfront_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Percentage of commission which will be disbursed to broker upfront.</description>
        <inlineHelpText>Percentage of commission which will be disbursed to broker upfront.</inlineHelpText>
        <label>Upfront Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Broker</label>
    <nameField>
        <displayFormat>LB-{000000000}</displayFormat>
        <label>Broker Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brokers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Check_Broker_Account_and_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(loan__Account__c), ISBLANK(loan__Contact__c))</errorConditionFormula>
        <errorMessage>Please enter either a Broker Account or a Broker Contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Broker_cound</fullName>
        <active>false</active>
        <errorConditionFormula>(loan__Lending_Account__r.loan__Enabled_Broker_Count__c &gt; 1)</errorConditionFormula>
        <errorMessage>Only one broker can be associated with loan account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Flat_Rate_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(loan__Calculation_Method__c , &apos;Flat Amount&apos;) &amp;&amp; (loan__Factor__c != 1.0 )</errorConditionFormula>
        <errorMessage>For Flat commission calculation method, the factor has to be equal to 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Validate_Rate</fullName>
        <active>false</active>
        <errorConditionFormula>((loan__Upfront_Percentage__c &gt; 1)||(loan__Maximum_Commission_Percentage__c &gt;1)||(loan__Factor__c&gt;1))</errorConditionFormula>
        <errorMessage>Upfront %, Max Commission % or Factor cannot be more than 100.00%</errorMessage>
    </validationRules>
</CustomObject>